[package]
name = "comix"
version = "0.1.0"
edition = "2021"
description = "Format STARs and DPs from FAA data"

[[bin]]
name = "comix"
path = "src/main.rs"

[dependencies]
# Handle errors easily and idiomatically
anyhow = "1.0"
# Parse command line arguments
clap = { version = "4.5.53", features = ["derive"] }
# Read CSV data
csv = "1.4.0"
# Write GeoJSON format
geojson = "0.24.2"
# Use serde for custom derive functionality
serde = { version = "1.0.228", features = ["derive"] }